--- a/_posts/2018-07-18-事务概念.md
+++ b/_posts/2018-07-18-事务概念.md
@@ -12,9 +12,9 @@ keywords: spring, 事务
 
 什么事务？数据库中事务的四大特性：
 
- - 原子性(Atomicity):操作这些指令时，要么全部执行成功，要么全部不执行。只要其中一个指令执行失败，所有的指令都执行失败，数据进行回滚，回到执行指令前的数据状态。
+ - 原子性(Atomicity):操作这些指令时，要么全部执行成功，要么全部不执行。只要其中一个指令执行失败，所有的指令都执行失败                    ，数据进行回滚，回到执行指令前的数据状态。
  - 一致性(Consistency):事务的执行使数据从一个状态转换为另一个状态，但是对于整个数据的完整性保持稳定。
- - 隔离性(Isolation)：在该事务执行的过程中，无论发生的任何数据的改变都应该只存在于该事务之中，对外界不存在任何影响.只有在事务确定正确提交之后，才会显示该事务对数据的改变。其他事务才能获取到这些改变后的数据。
+ - 隔离性(Isolation)：在该事务执行的过程中，无论发生的任何数据的改变都应该只存在于该事务之中，对外界不存在任何影响。                   只有在事务确定正确提交之后，才会显示该事务对数据的改变。其他事务才能获取到这些改变后的数据。
  - 持久性(Durability):当事务正确完成后，它对于数据的改变是永久性的。
 
 通俗点讲，事务就是一系列指令的集合。
@@ -28,7 +28,7 @@ keywords: spring, 事务
 在许多事务处理同一个数据时，如果没有采取有效的隔离机制，那么并发处理数据时，会带来一些的问题。
 问题分为5类，包括3类数据读问题：脏读、不可重复读和幻读。两类数据更新问题：第一类丢失更新、第二类丢失更新。
 
-1.脏读：一个事务读取到另一个事务未提交的更新数据。
+ 1.脏读：一个事务读取到另一个事务未提交的更新数据。
   
 ``` 
 小明的银行卡余额里有100元。现在他打算用手机点一个外卖饮料，需要付款10元。但是这个时候，他的女朋友看中了一件衣服95元  
@@ -97,11 +97,8 @@ insert、update、delete和selsct for update语句都会隐式采用必要的行
  
 在MySQL数据库中，支持上面四种隔离级别，默认的为Repeatable read (可重复读)；而在Oracle数据库中，只支持Serializable (串行化)级别和Read committed (读已提交)这两种级别，其中默认的为Read committed级别。
 
-### 参考链接
-
-[https://blog.csdn.net/gloomy_114/article/details/62048335](https://blog.csdn.net/gloomy_114/article/details/62048335)
-
 ----------
+日期:2018年07月20日 10时48分30秒
 
 作者：狂奔的熊二   
 
