Update and rename 2019-01-08-Jdk自带监控命令.md to 2019-01-08-JVM系列(二)：JDK自带监控命令.md

--- a/_posts/2019-01-08-JVM系列(二)：JDK自带监控命令.md
+++ b/_posts/2019-01-08-JVM系列(二)：JDK自带监控命令.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Jdk自带监控命令
-categories: [jvm]
-description: Jdk自带监控命令
-keywords: Jvm
+title: JVM系列(二)：JDK自带监控命令
+categories: [JVM]
+description: JVM系列(二)：JDK自带监控命令
+keywords: JVM
 
 ---
 
