Update and rename 2018-12-26-Javamemory.md to 2018-12-26-JVM系列(一)：Java内存结构.md

--- a/_posts/2018-12-26-JVM系列(一)：Java内存结构.md
+++ b/_posts/2018-12-26-JVM系列(一)：Java内存结构.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Java内存结构
-categories: [Java,JVM]
-description: Java内存结构
-keywords: Java, JVM
+title: JVM系列(一)：Java内存结构
+categories: [JVM]
+description: JVM系列(一)：Java内存结构
+keywords: JVM
 
 ---
 
